[gd_scene load_steps=4 format=3 uid="uid://b3lnpuakhtd3f"]

[ext_resource type="PackedScene" uid="uid://hdrp5vwumx0a" path="res://resources/scenes/player_game_ui.tscn" id="1_2m7ek"]
[ext_resource type="Script" path="res://resources/scenes/battle_window.gd" id="1_lu48o"]
[ext_resource type="PackedScene" uid="uid://lfbacy4vv3b2" path="res://resources/scenes/enemy_game_ui.tscn" id="1_ursqd"]

[node name="BattleWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lu48o")

[node name="WinText" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.0
offset_top = -20.0
offset_right = 283.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][font_size=48][color=green]Win"

[node name="LoseText" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.0
offset_top = -20.0
offset_right = 283.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][font_size=48][color=red]Lose"

[node name="EnemyGameUI" parent="." instance=ExtResource("1_ursqd")]
visible = false
layout_mode = 1

[node name="PlayerGameUI" parent="." instance=ExtResource("1_2m7ek")]
layout_mode = 1

[node name="DepthWindow" type="RichTextLabel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -113.5
offset_top = 15.0
offset_right = 113.5
offset_bottom = 55.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center][font_size=36]Depth 0M"
